# critic-py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: requirements.txt
docs/source/: cli.rst  conf.py  index.rst  quickstart.rst
src/critic/: cli.py  errors.py
src/critic/core/: __init__.py  parser.py
src/critic/util/: conf.py  defaults.toml  io.py  printing.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_minify.py
