[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "critic"
version = "0.0.1"
description = "A neat pure-python tool to prepare your static files for deployment"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: HTML"
]
keywords = [
    "minify", "minifier", "html", "css", "js", "javascript", "static", "assets",
    "compression", "brotli", "gzip", "optimize", "optimizer", "web", "build", "bundle",
    "preprocess"
]

[project.urls]
Homepage = "https://github.com/Arcader717/critic-py"
Documentation = "https://"
Repository = "https://github.com/Arcader717/critic-py.git"
Issues = "https://github.com/Arcader717/critic-py/issues"
Changelog = "https://github.com/Arcader717/critic-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "tox"
]

[project.scripts]
critic = "critic:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]